--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,9 +4,11 @@
 }
 
 .maxWidthWrapper {
+  max-width: 1024px;
 }
 
 .header {
+  width: 65%;
   padding-bottom: 64px;
 }
 
@@ -24,7 +26,14 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 10%;
+  left: 60%;
+  height: 90%;
+  /* width: 50%; */
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
